# Bots

./: README.md  clean_for_push.sh  filesCn.txt  filesTest.txt  start_client.sh  start_compile.sh  start_compile_lib.sh  start_debug.sh  start_local.sh  start_server.sh  如何升级.txt
BOTDATA/TEST/: error_correct.top  error_correction.top  simplecontrol.top  welcome.top  分词.top
Bot_tools/: dict_convert.py
Bot_tools/Example/: CMakeLists.txt  filesTest.txt  start_local.sh  test_Dialog.cpp
Bot_tools/Usage/: CMakeLists.txt  Dialog.cpp  Dialog.h  start_debug.sh  start_local.sh  test_Dialog.cpp
Bot_tools/Usage/BOTDATA/TEST/: error_correct.top
Bot_tools/Usage/BOTDATA/TEST/tmp/: top_up.top
Bot_tools/Usage/ChatScript/include/: csocket.h  english.h  functionExecute.h  spellcheck.h
Bot_tools/Usage/ChatScript/privatecode/: preprocess.cpp  privatetable.cpp
Bot_tools/Usage/LOGS/: bugs.txt  log1024.txt  startlog.txt
Bot_tools/Usage/TOPIC/BUILD1/: keywords1.txt  patternWords1.txt  script1.txt
Bot_tools/Usage/USERS/: buildTest_log.txt  log-.txt  log-user.txt  topic_user_test.txt
Bot_tools/chatterbot_2_chatscript/: corpus.py  data_convert.py  json_2_script.py  keywordless.top
ChatScript-7.2/: README.html  changes.md  changes.txt  version.txt
ChatScript-7.2/BINARIES/: ChatScript  LinuxChatScript64  readme.txt
ChatScript-7.2/HTMLDOCUMENTATION/: ChatScript-Command-Line-Parameters.html  ChatScript-Debugging-Manual.html  ChatScript-Json.html  (+6 more)
ChatScript-7.3/: .gitignore  README.md  changes.md  changes.txt  gdb.cfg  version.txt
LOGS/: bugs.txt  exitlog.txt  startlog.txt
MultiTurnDialogue/: CMakeLists.txt  build_all.sh  clean.sh  deploy.sh  files0.txt  filesTest.txt  run.sh  test_Dialog.cpp
USERS/: build0_log.txt  buildAT_log.txt  buildTest_log.txt  log-user.txt  topic_user_test.txt
(+427 files in other folders)
